--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -16,6 +16,12 @@ html {
     padding: 30px 10px 10px;
     display: flex;
     align-items: center;
+    flex-direction: colum;
+    flex-wrap: nowrap;
+    align-content: stretch;
+    justify-content: center;
+    align-items: stretch;
+    max-width: 210px;
 }
 
 .principal {
@@ -33,8 +39,9 @@ html {
 // media query do bloco principal para mobile //
 @media (max-width: 480px) {
     .principal {
-        min-width: 350px;
-        min-height: 450px;
+        min-width: 60px;
+        min-height: 10px;
+        padding: 10px 10px 5px;
     }
 }
 
@@ -178,6 +185,14 @@ html {
     margin: 0;
     padding: 0;
 }
+//media query para bloco lista versão mobile//
+@media (max-width: 480px) {
+    .lista {
+        display: none;
+        align-items: center;
+        padding: 0;
+    }
+}
 
 .item {
     list-style: none;
@@ -191,6 +206,12 @@ html {
     align-items: center;
     gap: 1em;
     font-size: 20px;
+}
+//media query do bloco item para mobile//
+@media (max-width: 480px) {
+    padding: 10px;
+    gap: 5px;
+    font-size: 15px;
 }
 
 .item strong {
